--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.55.0",
     "class-variance-authority": "^0.7.0",
@@ -32,6 +34,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "react-input-mask": "^2.0.4",
+    "react-phone-number-input": "^3.4.9",
     "react-router-dom": "^6.26.2",
     "react-spinners": "^0.14.1",
     "recharts": "^2.12.7",
